[workspace]
members = [
    "viii_collections",
    "ix_error",
    "x_generics_trait",
    "adder",
    "minigrep",
    "xiii_closure_iterator",
    "xiv_my_create",
    "xiv_art",
    "add_one",
    "xv",
    "xvi",
    "xvii",
    "xvii_blog",
    "xviii_pattern_matching",
    "xix_advanced",
    "web_hello",
    "tonic_grpc",
    "my_tokio",
    "my_iptables",
]
#  做个测试
[profile.dev]
opt-level = 1 #优化程度为1

[profile.release]
opt-level = 3