[package]
name = "my_tokio"
version = "0.1.0"
edition = "2021"
[[bin]] # 用来运行 HelloWorld
name = "helloworld_tokio"
path = "src/helloworld.rs"
[[bin]]
name = "runtime_tokio"
path = "src/runtime.rs"
[[bin]]
name = "main_tokio"
path = "src/main.rs"
[[bin]]
name = "multi_runtime_tokio"
path = "src/multi_runtime.rs"
[[bin]]
name = "in_runtime_async_tokio"
path = "src/in_runtime_async.rs"
[[bin]]
name = "in_runtime_spawn_tokio"
path = "src/in_runtime_spawn.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0" , features = ["full"] }
chrono = {version = "0.4.1"}