[package]
name = "my_tokio"
version = "0.1.0"
edition = "2021"

# runtime
[[bin]] # 用来运行 HelloWorld
name = "helloworld_tokio"
path = "src/runtime/helloworld.rs"
[[bin]]
name = "runtime_tokio"
path = "src/runtime/runtime.rs"
[[bin]]
name = "main_tokio"
path = "src/runtime/main.rs"
[[bin]]
name = "multi_runtime_tokio"
path = "src/runtime/multi_runtime.rs"
[[bin]]
name = "in_runtime_async_tokio"
path = "src/runtime/in_runtime_async.rs"
[[bin]]
name = "in_runtime_spawn_tokio"
path = "src/runtime/in_runtime_spawn.rs"
[[bin]]
name = "in_runtime_enter_tokio"
path = "src/runtime/in_runtime_enter.rs"
[[bin]]
name = "in_runtime_thread_tokio"
path = "src/runtime/in_runtime_thread.rs"
[[bin]]
name = "in_runtime_drop_tokio"
path = "src/runtime/in_runtime_drop.rs"
[[bin]]
name = "runtime_handle_tokio"
path = "src/runtime/runtime_handle.rs"
[[bin]]
name = "multi_single_runtime_tokio"
path = "src/runtime/multi_single_runtime.rs"

#task
[[bin]]
name = "task_creat_tokio"
path = "src/task/task_creat.rs"
[[bin]]
name = "task_abort_tokio"
path = "src/task/task_abort.rs"
[[bin]]
name = "task_join_tokio"
path = "src/task/task_join.rs"
[[bin]]
name = "task_localset_tokio"
path = "src/task/task_localset.rs"
[[bin]]
name = "task_select_tokio"
path = "src/task/task_select.rs"

# Timer
[[bin]]
name = "timer_duration_tokio"
path = "src/timer/timer_duration.rs"
[[bin]]
name = "timer_instant_tokio"
path = "src/timer/timer_instant.rs"
[[bin]]
name = "timer_sleep_tokio"
path = "src/timer/timer_sleep.rs"
[[bin]]
name = "timer_timeout_tokio"
path = "src/timer/timer_timeout.rs"
[[bin]]
name = "timer_interval_tokio"
path = "src/timer/timer_interval.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.23.0" , features = ["full"] }
chrono = {version = "0.4.1"}